Alguns comentarios no padrao do swagger
